--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,6 +11,12 @@ sites:
     url: https://news.ycombinator.com
   - name: Test Broken Site
     url: https://thissitedoesnotexist.koj.co
+  - name: leela
+    name: https://leela.waf.hk
+  - name: waf.hk
+    name: https://www.waf.hk
+  - name: aatf
+    name: https://www.aatf.us
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
