--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,8 +3,8 @@ owner: mymovielist # Your GitHub organization or username, where this repository
 repo: uptime # The name of this repository
 
 sites:
-  - name: leela
-    url: https://leela.waf.hk
+  - name: ripley  
+    url: https://ripley.waf.hk
   - name: waf.hk
     url: https://www.waf.hk
   - name: aatf
